--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ IMG.displayed {
 </style>
 <body>
 
-<div> <IMG class="displayed" src="images/nothing.png" alt="Nothing"> </div>
+<div> <IMG class="displayed" src="https://raw.githubusercontent.com/Appeiro/NOTHING/master/nothing.png" alt="Nothing"> </div>
 
 </body>
 
