--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title> </title>
+<title>NOTHING</title>
 <head>
 <!-- Chrome, Firefox OS and Opera -->
 <meta name="theme-color" content="#000">
