--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <title>NOTHING</title>
 <head>
+<script src="https://aframe.io/releases/0.3.2/aframe.min.js"></script>
 <!-- Chrome, Firefox OS and Opera -->
 <meta name="theme-color" content="#000">
 <!-- Windows Phone -->
