--- a/index.html
+++ b/index.html
@@ -11,52 +11,18 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="#000">
 </head>
 <style>
-body{
-  background:#000;
+body {
+    background-color: black;
 }
-div{
-  height: 100vh;
-  background-color: #000;
-  background-image: 
-repeating-linear-gradient(transparent, 
-transparent 50px, rgba(0,255,255, .25) 50px,
-rgba(0,255,255, .25) 100px), 
-repeating-linear-gradient(90deg, rgba(0,255,255, .25), 
-rgba(0,255,255, .25) 50px, 
-transparent 50px, transparent 100px), 
-repeating-linear-gradient(135deg, transparent, 
-transparent 4px, 
-rgba(255,255,255,.1) 4px, 
-rgba(255,255,255,.1) 8px), 
-repeating-linear-gradient(45deg, transparent, transparent 4px, rgba(255,255,255,.1) 4px, 
-rgba(255,255,255,.1) 8px), 
-repeating-linear-gradient(transparent, transparent 20px, 
-rgba(100,250,250, .2) 20px, 
-rgba(100,250,250, .2) 21px, 
-transparent 21px,
-transparent 29px, 
-rgba(100,250,250, .2) 29px, rgba(100,250,250, 
-.2) 30px, transparent 30px, transparent 50px), 
-repeating-linear-gradient(90deg, transparent, 
-transparent 20px, 
-rgba(100,250,250, .2) 20px, 
-rgba(100,250,250, .2) 21px, 
-transparent 21px,transparent 29px, 
-rgba(100,250,250, .2) 29px, 
-rgba(100,250,250, .2) 30px, 
-transparent 30px, transparent 50px);
-}
-IMG.displayed {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 20%;
-     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
+
+p.large {
+    color: white;
+    text-align: center;
 }
 </style>
 <body>
 
-<div> <IMG class="displayed" src="https://raw.githubusercontent.com/Appeiro/NOTHING/master/nothing.png" alt="Nothing"> </div>
+<p class="center large">This paragraph will be red, center-aligned, and in a large font-size.</p>
 
 </body>
 
