--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@ body {
     background-color: black;
 }
 
-p.large {
-    color: white;
+p.center {
     text-align: center;
+    color: black;
 }
+
+p.large {
+    font-size: 300%;
 </style>
 <body>
 
