--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@ body {
     background-color: black;
 }
 
-p{
+p.center{
     text-align: center;
-    color: black;
+    color: white;
 }
 
-p{
+p.large{
     font-size: 300%;
     }
 </style>
