--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ p.large{
 </style>
 <body>
 
-<p class="center large">This paragraph will be red, center-aligned, and in a large font-size.</p>
+<p class="center large">NOTHING</p>
 
 </body>
 
