--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ body {
 p.center{
     text-align: center;
     color: white;
-     font-family: arial;
+     font-family: Arial, Helvetica, sans-serif;
 }
 
 p.large{
-    font-size: 300%;
+    font-size: 700%;
     }
 </style>
 <body>
