--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <meta name="msapplication-navbutton-color" content="#000">
 <!-- iOS Safari -->
 <meta name="apple-mobile-web-app-status-bar-style" content="#000">
+<!--Favicon-->
+<link rel="icon" type="image/png"
+ href="https://raw.githubusercontent.com/Appeiro/NOTHING/master/NOTHING%20FAV.png" />
 </head>
 <style>
 body {
