--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <!--Favicon-->
 <link rel="icon" type="image/png"
  href="https://raw.githubusercontent.com/Appeiro/NOTHING/master/NOTHING%20FAV.png" />
+ <!--Fonts-->
+ <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <style>
 body {
@@ -20,8 +22,7 @@ body {
 
 p.center{
     text-align: center;
-    color: white;
-     font-family: Arial, Helvetica, sans-serif;
+    color: white;    
 }
 
 p.large{
