--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ body {
 
 p.center{
     text-align: center;
-    color: white;    
+    color: white;
+    font-family: 'Roboto', sans-serif;
 }
 
 p.large{
