--- a/index.html
+++ b/index.html
@@ -12,20 +12,16 @@
 <!--Favicon-->
 <link rel="icon" type="image/png"
  href="https://raw.githubusercontent.com/Appeiro/NOTHING/master/NOTHING%20FAV.png" />
- <!--Fonts-->
- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <style>
 body {
     background-color: black;
 }
-
 p.center{
     text-align: center;
     color: white;
-    font-family: 'Roboto', sans-serif;
+     font-family: Arial, Helvetica, sans-serif;
 }
-
 p.large{
     font-size: 700%;
     }
